// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/HotSpotEditorModal ☢️ Empty 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bx--modal is-visible iot--hotspot-editor-modal iot--composed-modal--full-screen iot--composed-modal"
      data-floating-menu-container={true}
      onBlur={[Function]}
      onClick={[Function]}
      onClose={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      open={true}
      role="presentation"
    >
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
      <div
        className="bx--modal-container"
        role="dialog"
      >
        <div
          className="bx--modal-header"
        >
          <p
            className="bx--modal-header__label bx--type-delta"
          >
            landscape.jpg
          </p>
          <p
            className="bx--modal-header__heading bx--type-beta"
          >
            Edit image
          </p>
          <button
            aria-label="Close"
            className="bx--modal-close"
            onClick={[Function]}
            title="Close"
            type="button"
          >
            <svg
              aria-hidden={true}
              className="bx--modal-close__icon"
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
        <div
          className="bx--modal-content"
        >
          <div />
          <div>
            <div
              className="bx--content-switcher"
              onChange={[Function]}
              role="tablist"
            >
              <button
                aria-selected={true}
                className="bx--content-switcher-btn bx--content-switcher--selected"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="bx--content-switcher__label"
                >
                  Hotspots
                </span>
              </button>
              <button
                aria-selected={false}
                className="bx--content-switcher-btn"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex="-1"
                type="button"
              >
                <span
                  className="bx--content-switcher__label"
                >
                  Labels
                </span>
              </button>
            </div>
            <div
              className="iot--dynamic-hotspot-source-picker"
              data-testid="dynamic-hotspot-source-picker"
            >
              <div
                className="bx--dropdown__wrapper bx--list-box__wrapper"
                data-testid="dynamic-hotspot-source-picker-x-coordinate-dropdown"
              >
                <label
                  className="bx--label"
                  htmlFor="downshift-0-toggle-button"
                  id="downshift-0-label"
                >
                  X coordinate
                </label>
                <div
                  className="bx--dropdown bx--list-box"
                  id="dynamic-hotspot-source-picker-x-coordinate-dropdown"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <button
                    aria-disabled={false}
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-0-label downshift-0-toggle-button"
                    className="bx--list-box__field"
                    disabled={false}
                    id="downshift-0-toggle-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                    >
                      Select data item
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-0-label"
                    className="bx--list-box__menu"
                    id="downshift-0-menu"
                    onBlur={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    role="listbox"
                    tabIndex={-1}
                  />
                </div>
              </div>
              <div
                className="bx--dropdown__wrapper bx--list-box__wrapper"
                data-testid="dynamic-hotspot-source-picker-y-coordinate-dropdown"
              >
                <label
                  className="bx--label"
                  htmlFor="downshift-1-toggle-button"
                  id="downshift-1-label"
                >
                  Y coordinate
                </label>
                <div
                  className="bx--dropdown bx--list-box"
                  id="dynamic-hotspot-source-picker-y-coordinate-dropdown"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <button
                    aria-disabled={false}
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-1-label downshift-1-toggle-button"
                    className="bx--list-box__field"
                    disabled={false}
                    id="downshift-1-toggle-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                    >
                      Select data item
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-1-label"
                    className="bx--list-box__menu"
                    id="downshift-1-menu"
                    onBlur={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    role="listbox"
                    tabIndex={-1}
                  />
                </div>
              </div>
              <button
                className="iot--dynamic-hotspot-source-picker__clear-button iot--dynamic-hotspot-source-picker__clear-button--invisible iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-end"
                data-testid="dynamic-hotspot-source-picker-clear-dropdown"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="bx--assistive-text"
                >
                  Clear coordinate sources
                </span>
                <svg
                  aria-hidden="true"
                  aria-label="Clear coordinate sources"
                  className="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 27H30V29H7zM27.38 10.51L19.45 2.59a2 2 0 00-2.83 0l-14 14a2 2 0 000 2.83L7.13 24h9.59L27.38 13.34A2 2 0 0027.38 10.51zM15.89 22H8L4 18l6.31-6.31 7.93 7.92zm3.76-3.76l-7.92-7.93L18 4 26 11.93z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="bx--tabs"
              role="navigation"
              selected={0}
            >
              <div
                aria-label="listbox"
                className="bx--tabs-trigger"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="listbox"
                tabIndex={0}
              >
                <a
                  className="bx--tabs-trigger-text"
                  href="#"
                  onClick={[Function]}
                  tabIndex={-1}
                >
                  Tooltip
                </a>
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    show menu options
                  </title>
                </svg>
              </div>
              <ul
                className="bx--tabs__nav bx--tabs__nav--hidden"
                role="tablist"
              >
                <li
                  aria-controls="undefined__panel"
                  aria-selected={true}
                  className="bx--tabs__nav-item bx--tabs__nav-item--selected"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={-1}
                >
                  <a
                    className="bx--tabs__nav-link"
                    href="#"
                    tabIndex={0}
                  >
                    Tooltip
                  </a>
                </li>
                <li
                  aria-controls="undefined__panel"
                  aria-selected={false}
                  className="bx--tabs__nav-item"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={-1}
                >
                  <a
                    className="bx--tabs__nav-link"
                    href="#"
                    tabIndex={-1}
                  >
                    Data source
                  </a>
                </li>
              </ul>
            </div>
            <div
              aria-hidden={false}
              className="bx--tab-content"
              hidden={false}
              role="tabpanel"
              selected={true}
            >
              <div
                className="iot--hotspot-editor-tooltip-tab"
              >
                <div
                  className="iot--hotspot-editor--tooltip-info-message"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,7Zm4,17.125h-8v-2.25h2.875v-6.75h-1.875v-2.25h4.125v9h2.875Z"
                    />
                    <path
                      d="M16,7a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,7Zm4,17.125h-8v-2.25h2.875v-6.75h-1.875v-2.25h4.125v9h2.875Z"
                      data-icon-path="inner-path"
                      fill="none"
                    />
                  </svg>
                  <p>
                    Hold the CTRL key and click a position on the image to add a hotspot, or set the X and Y coordinates using dataitems and create hotspots at those positions.
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-hidden={true}
              className="bx--tab-content"
              hidden={true}
              role="tabpanel"
              selected={false}
            />
          </div>
        </div>
        <div
          className="bx--modal-footer iot--composed-modal-footer"
        >
          <button
            className="iot--btn bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Cancel
          </button>
          <button
            className="iot--btn bx--btn bx--btn--primary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Save
          </button>
        </div>
      </div>
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/HotSpotEditorModal ☢️ Empty with getValidDataItems callback 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bx--modal is-visible iot--hotspot-editor-modal iot--composed-modal--full-screen iot--composed-modal"
      data-floating-menu-container={true}
      onBlur={[Function]}
      onClick={[Function]}
      onClose={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      open={true}
      role="presentation"
    >
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
      <div
        className="bx--modal-container"
        role="dialog"
      >
        <div
          className="bx--modal-header"
        >
          <p
            className="bx--modal-header__label bx--type-delta"
          >
            landscape.jpg
          </p>
          <p
            className="bx--modal-header__heading bx--type-beta"
          >
            Edit image
          </p>
          <button
            aria-label="Close"
            className="bx--modal-close"
            onClick={[Function]}
            title="Close"
            type="button"
          >
            <svg
              aria-hidden={true}
              className="bx--modal-close__icon"
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
        <div
          className="bx--modal-content"
        >
          <div />
          <div>
            <div
              className="bx--content-switcher"
              onChange={[Function]}
              role="tablist"
            >
              <button
                aria-selected={true}
                className="bx--content-switcher-btn bx--content-switcher--selected"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="bx--content-switcher__label"
                >
                  Hotspots
                </span>
              </button>
              <button
                aria-selected={false}
                className="bx--content-switcher-btn"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex="-1"
                type="button"
              >
                <span
                  className="bx--content-switcher__label"
                >
                  Labels
                </span>
              </button>
            </div>
            <div
              className="iot--dynamic-hotspot-source-picker"
              data-testid="dynamic-hotspot-source-picker"
            >
              <div
                className="bx--dropdown__wrapper bx--list-box__wrapper"
                data-testid="dynamic-hotspot-source-picker-x-coordinate-dropdown"
              >
                <label
                  className="bx--label"
                  htmlFor="downshift-0-toggle-button"
                  id="downshift-0-label"
                >
                  X coordinate
                </label>
                <div
                  className="bx--dropdown bx--list-box"
                  id="dynamic-hotspot-source-picker-x-coordinate-dropdown"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <button
                    aria-disabled={false}
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-0-label downshift-0-toggle-button"
                    className="bx--list-box__field"
                    disabled={false}
                    id="downshift-0-toggle-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                    >
                      Select data item
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-0-label"
                    className="bx--list-box__menu"
                    id="downshift-0-menu"
                    onBlur={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    role="listbox"
                    tabIndex={-1}
                  />
                </div>
              </div>
              <div
                className="bx--dropdown__wrapper bx--list-box__wrapper"
                data-testid="dynamic-hotspot-source-picker-y-coordinate-dropdown"
              >
                <label
                  className="bx--label"
                  htmlFor="downshift-1-toggle-button"
                  id="downshift-1-label"
                >
                  Y coordinate
                </label>
                <div
                  className="bx--dropdown bx--list-box"
                  id="dynamic-hotspot-source-picker-y-coordinate-dropdown"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <button
                    aria-disabled={false}
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-1-label downshift-1-toggle-button"
                    className="bx--list-box__field"
                    disabled={false}
                    id="downshift-1-toggle-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                    >
                      Select data item
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-1-label"
                    className="bx--list-box__menu"
                    id="downshift-1-menu"
                    onBlur={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    role="listbox"
                    tabIndex={-1}
                  />
                </div>
              </div>
              <button
                className="iot--dynamic-hotspot-source-picker__clear-button iot--dynamic-hotspot-source-picker__clear-button--invisible iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-end"
                data-testid="dynamic-hotspot-source-picker-clear-dropdown"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="bx--assistive-text"
                >
                  Clear coordinate sources
                </span>
                <svg
                  aria-hidden="true"
                  aria-label="Clear coordinate sources"
                  className="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 27H30V29H7zM27.38 10.51L19.45 2.59a2 2 0 00-2.83 0l-14 14a2 2 0 000 2.83L7.13 24h9.59L27.38 13.34A2 2 0 0027.38 10.51zM15.89 22H8L4 18l6.31-6.31 7.93 7.92zm3.76-3.76l-7.92-7.93L18 4 26 11.93z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="bx--tabs"
              role="navigation"
              selected={0}
            >
              <div
                aria-label="listbox"
                className="bx--tabs-trigger"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="listbox"
                tabIndex={0}
              >
                <a
                  className="bx--tabs-trigger-text"
                  href="#"
                  onClick={[Function]}
                  tabIndex={-1}
                >
                  Tooltip
                </a>
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    show menu options
                  </title>
                </svg>
              </div>
              <ul
                className="bx--tabs__nav bx--tabs__nav--hidden"
                role="tablist"
              >
                <li
                  aria-controls="undefined__panel"
                  aria-selected={true}
                  className="bx--tabs__nav-item bx--tabs__nav-item--selected"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={-1}
                >
                  <a
                    className="bx--tabs__nav-link"
                    href="#"
                    tabIndex={0}
                  >
                    Tooltip
                  </a>
                </li>
                <li
                  aria-controls="undefined__panel"
                  aria-selected={false}
                  className="bx--tabs__nav-item"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={-1}
                >
                  <a
                    className="bx--tabs__nav-link"
                    href="#"
                    tabIndex={-1}
                  >
                    Data source
                  </a>
                </li>
              </ul>
            </div>
            <div
              aria-hidden={false}
              className="bx--tab-content"
              hidden={false}
              role="tabpanel"
              selected={true}
            >
              <div
                className="iot--hotspot-editor-tooltip-tab"
              >
                <div
                  className="iot--hotspot-editor--tooltip-info-message"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,7Zm4,17.125h-8v-2.25h2.875v-6.75h-1.875v-2.25h4.125v9h2.875Z"
                    />
                    <path
                      d="M16,7a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,7Zm4,17.125h-8v-2.25h2.875v-6.75h-1.875v-2.25h4.125v9h2.875Z"
                      data-icon-path="inner-path"
                      fill="none"
                    />
                  </svg>
                  <p>
                    Hold the CTRL key and click a position on the image to add a hotspot, or set the X and Y coordinates using dataitems and create hotspots at those positions.
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-hidden={true}
              className="bx--tab-content"
              hidden={true}
              role="tabpanel"
              selected={false}
            />
          </div>
        </div>
        <div
          className="bx--modal-footer iot--composed-modal-footer"
        >
          <button
            className="iot--btn bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Cancel
          </button>
          <button
            className="iot--btn bx--btn bx--btn--primary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Save
          </button>
        </div>
      </div>
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/HotSpotEditorModal ☢️ Width Existing Dynamic Hotspots 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bx--modal is-visible iot--hotspot-editor-modal iot--composed-modal--full-screen iot--composed-modal"
      data-floating-menu-container={true}
      onBlur={[Function]}
      onClick={[Function]}
      onClose={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      open={true}
      role="presentation"
    >
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
      <div
        className="bx--modal-container"
        role="dialog"
      >
        <div
          className="bx--modal-header"
        >
          <p
            className="bx--modal-header__label bx--type-delta"
          >
            landscape.jpg
          </p>
          <p
            className="bx--modal-header__heading bx--type-beta"
          >
            Edit image
          </p>
          <button
            aria-label="Close"
            className="bx--modal-close"
            onClick={[Function]}
            title="Close"
            type="button"
          >
            <svg
              aria-hidden={true}
              className="bx--modal-close__icon"
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
        <div
          className="bx--modal-content"
        >
          <div />
          <div>
            <div
              className="bx--content-switcher"
              onChange={[Function]}
              role="tablist"
            >
              <button
                aria-selected={true}
                className="bx--content-switcher-btn bx--content-switcher--selected"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="bx--content-switcher__label"
                >
                  Hotspots
                </span>
              </button>
              <button
                aria-selected={false}
                className="bx--content-switcher-btn"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex="-1"
                type="button"
              >
                <span
                  className="bx--content-switcher__label"
                >
                  Labels
                </span>
              </button>
            </div>
            <div
              className="iot--dynamic-hotspot-source-picker"
              data-testid="dynamic-hotspot-source-picker"
            >
              <div
                className="bx--dropdown__wrapper bx--list-box__wrapper"
                data-testid="dynamic-hotspot-source-picker-x-coordinate-dropdown"
              >
                <label
                  className="bx--label"
                  htmlFor="downshift-2-toggle-button"
                  id="downshift-2-label"
                >
                  X coordinate
                </label>
                <div
                  className="bx--dropdown bx--list-box"
                  id="dynamic-hotspot-source-picker-x-coordinate-dropdown"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <button
                    aria-disabled={false}
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-2-label downshift-2-toggle-button"
                    className="bx--list-box__field"
                    disabled={false}
                    id="downshift-2-toggle-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                    >
                      {high} temp
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-2-label"
                    className="bx--list-box__menu"
                    id="downshift-2-menu"
                    onBlur={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    role="listbox"
                    tabIndex={-1}
                  />
                </div>
              </div>
              <div
                className="bx--dropdown__wrapper bx--list-box__wrapper"
                data-testid="dynamic-hotspot-source-picker-y-coordinate-dropdown"
              >
                <label
                  className="bx--label"
                  htmlFor="downshift-3-toggle-button"
                  id="downshift-3-label"
                >
                  Y coordinate
                </label>
                <div
                  className="bx--dropdown bx--list-box"
                  id="dynamic-hotspot-source-picker-y-coordinate-dropdown"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <button
                    aria-disabled={false}
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-3-label downshift-3-toggle-button"
                    className="bx--list-box__field"
                    disabled={false}
                    id="downshift-3-toggle-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                    >
                      Temperature
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-3-label"
                    className="bx--list-box__menu"
                    id="downshift-3-menu"
                    onBlur={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    role="listbox"
                    tabIndex={-1}
                  />
                </div>
              </div>
              <button
                className="iot--dynamic-hotspot-source-picker__clear-button iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-end"
                data-testid="dynamic-hotspot-source-picker-clear-dropdown"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="bx--assistive-text"
                >
                  Clear coordinate sources
                </span>
                <svg
                  aria-hidden="true"
                  aria-label="Clear coordinate sources"
                  className="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 27H30V29H7zM27.38 10.51L19.45 2.59a2 2 0 00-2.83 0l-14 14a2 2 0 000 2.83L7.13 24h9.59L27.38 13.34A2 2 0 0027.38 10.51zM15.89 22H8L4 18l6.31-6.31 7.93 7.92zm3.76-3.76l-7.92-7.93L18 4 26 11.93z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="bx--inline-notification bx--inline-notification--info"
              kind="info"
              role="alert"
            >
              <div
                className="bx--inline-notification__details"
              >
                <svg
                  aria-hidden={true}
                  className="bx--inline-notification__icon"
                  fill="currentColor"
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,7Zm4,17.125h-8v-2.25h2.875v-6.75h-1.875v-2.25h4.125v9h2.875Z"
                  />
                  <path
                    d="M16,7a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,7Zm4,17.125h-8v-2.25h2.875v-6.75h-1.875v-2.25h4.125v9h2.875Z"
                    data-icon-path="inner-path"
                    fill="none"
                  />
                  <title>
                    info icon
                  </title>
                </svg>
                <div
                  className="bx--inline-notification__text-wrapper"
                >
                  <p
                    className="bx--inline-notification__title"
                  >
                    There are more hotspots than can be shown
                  </p>
                  <div
                    className="bx--inline-notification__subtitle"
                  />
                </div>
              </div>
              <button
                aria-label="closes notification"
                className="bx--inline-notification__close-button"
                onClick={[Function]}
                title="closes notification"
                type="button"
              >
                <svg
                  aria-label="close notification"
                  className="bx--inline-notification__close-icon"
                  fill="currentColor"
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </button>
            </div>
            <div
              aria-live="assertive"
              className="bx--inline-loading iot--hotspot-editor-modal__dynamic-loading"
            >
              <div
                className="bx--inline-loading__animation"
              >
                <div
                  aria-atomic="true"
                  aria-labelledby="loading-id-5"
                  aria-live="assertive"
                  className="bx--loading bx--loading--small"
                >
                  <label
                    className="bx--visually-hidden"
                    id="loading-id-5"
                  >
                    Active loading indicator
                  </label>
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <title>
                      Active loading indicator
                    </title>
                    <circle
                      className="bx--loading__background"
                      cx="0"
                      cy="0"
                      r="26.8125"
                    />
                    <circle
                      className="bx--loading__stroke"
                      cx="0"
                      cy="0"
                      r="26.8125"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="bx--inline-loading__text"
              >
                Locating hotspots
              </div>
            </div>
          </div>
        </div>
        <div
          className="bx--modal-footer iot--composed-modal-footer"
        >
          <button
            className="iot--btn bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Cancel
          </button>
          <button
            className="iot--btn bx--btn bx--btn--primary bx--btn--disabled"
            disabled={true}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Save
          </button>
        </div>
      </div>
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/HotSpotEditorModal ☢️ Width Existing Hotspots 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bx--modal is-visible iot--hotspot-editor-modal iot--composed-modal--full-screen iot--composed-modal"
      data-floating-menu-container={true}
      onBlur={[Function]}
      onClick={[Function]}
      onClose={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      open={true}
      role="presentation"
    >
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
      <div
        className="bx--modal-container"
        role="dialog"
      >
        <div
          className="bx--modal-header"
        >
          <p
            className="bx--modal-header__label bx--type-delta"
          >
            landscape.jpg
          </p>
          <p
            className="bx--modal-header__heading bx--type-beta"
          >
            Edit image
          </p>
          <button
            aria-label="Close"
            className="bx--modal-close"
            onClick={[Function]}
            title="Close"
            type="button"
          >
            <svg
              aria-hidden={true}
              className="bx--modal-close__icon"
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
        <div
          className="bx--modal-content"
        >
          <div />
          <div>
            <div
              className="bx--content-switcher"
              onChange={[Function]}
              role="tablist"
            >
              <button
                aria-selected={true}
                className="bx--content-switcher-btn bx--content-switcher--selected"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="bx--content-switcher__label"
                >
                  Hotspots
                </span>
              </button>
              <button
                aria-selected={false}
                className="bx--content-switcher-btn"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex="-1"
                type="button"
              >
                <span
                  className="bx--content-switcher__label"
                >
                  Labels
                </span>
              </button>
            </div>
            <div
              className="iot--dynamic-hotspot-source-picker"
              data-testid="dynamic-hotspot-source-picker"
            >
              <div
                className="bx--dropdown__wrapper bx--list-box__wrapper"
                data-testid="dynamic-hotspot-source-picker-x-coordinate-dropdown"
              >
                <label
                  className="bx--label"
                  htmlFor="downshift-0-toggle-button"
                  id="downshift-0-label"
                >
                  X coordinate
                </label>
                <div
                  className="bx--dropdown bx--list-box"
                  id="dynamic-hotspot-source-picker-x-coordinate-dropdown"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <button
                    aria-disabled={false}
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-0-label downshift-0-toggle-button"
                    className="bx--list-box__field"
                    disabled={false}
                    id="downshift-0-toggle-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                    >
                      Select data item
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-0-label"
                    className="bx--list-box__menu"
                    id="downshift-0-menu"
                    onBlur={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    role="listbox"
                    tabIndex={-1}
                  />
                </div>
              </div>
              <div
                className="bx--dropdown__wrapper bx--list-box__wrapper"
                data-testid="dynamic-hotspot-source-picker-y-coordinate-dropdown"
              >
                <label
                  className="bx--label"
                  htmlFor="downshift-1-toggle-button"
                  id="downshift-1-label"
                >
                  Y coordinate
                </label>
                <div
                  className="bx--dropdown bx--list-box"
                  id="dynamic-hotspot-source-picker-y-coordinate-dropdown"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <button
                    aria-disabled={false}
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-1-label downshift-1-toggle-button"
                    className="bx--list-box__field"
                    disabled={false}
                    id="downshift-1-toggle-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                    >
                      Select data item
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-1-label"
                    className="bx--list-box__menu"
                    id="downshift-1-menu"
                    onBlur={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    role="listbox"
                    tabIndex={-1}
                  />
                </div>
              </div>
              <button
                className="iot--dynamic-hotspot-source-picker__clear-button iot--dynamic-hotspot-source-picker__clear-button--invisible iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-end"
                data-testid="dynamic-hotspot-source-picker-clear-dropdown"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="bx--assistive-text"
                >
                  Clear coordinate sources
                </span>
                <svg
                  aria-hidden="true"
                  aria-label="Clear coordinate sources"
                  className="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 27H30V29H7zM27.38 10.51L19.45 2.59a2 2 0 00-2.83 0l-14 14a2 2 0 000 2.83L7.13 24h9.59L27.38 13.34A2 2 0 0027.38 10.51zM15.89 22H8L4 18l6.31-6.31 7.93 7.92zm3.76-3.76l-7.92-7.93L18 4 26 11.93z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="bx--tabs"
              role="navigation"
              selected={0}
            >
              <div
                aria-label="listbox"
                className="bx--tabs-trigger"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="listbox"
                tabIndex={0}
              >
                <a
                  className="bx--tabs-trigger-text"
                  href="#"
                  onClick={[Function]}
                  tabIndex={-1}
                >
                  Tooltip
                </a>
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    show menu options
                  </title>
                </svg>
              </div>
              <ul
                className="bx--tabs__nav bx--tabs__nav--hidden"
                role="tablist"
              >
                <li
                  aria-controls="undefined__panel"
                  aria-selected={true}
                  className="bx--tabs__nav-item bx--tabs__nav-item--selected"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={-1}
                >
                  <a
                    className="bx--tabs__nav-link"
                    href="#"
                    tabIndex={0}
                  >
                    Tooltip
                  </a>
                </li>
                <li
                  aria-controls="undefined__panel"
                  aria-selected={false}
                  className="bx--tabs__nav-item"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={-1}
                >
                  <a
                    className="bx--tabs__nav-link"
                    href="#"
                    tabIndex={-1}
                  >
                    Data source
                  </a>
                </li>
              </ul>
            </div>
            <div
              aria-hidden={false}
              className="bx--tab-content"
              hidden={false}
              role="tabpanel"
              selected={true}
            >
              <div
                className="iot--hotspot-editor-tooltip-tab"
              >
                <div
                  className="iot--hotspot-editor--tooltip-info-message"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,7Zm4,17.125h-8v-2.25h2.875v-6.75h-1.875v-2.25h4.125v9h2.875Z"
                    />
                    <path
                      d="M16,7a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,7Zm4,17.125h-8v-2.25h2.875v-6.75h-1.875v-2.25h4.125v9h2.875Z"
                      data-icon-path="inner-path"
                      fill="none"
                    />
                  </svg>
                  <p>
                    Hold the CTRL key and click a position on the image to add a hotspot, or set the X and Y coordinates using dataitems and create hotspots at those positions.
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-hidden={true}
              className="bx--tab-content"
              hidden={true}
              role="tabpanel"
              selected={false}
            />
          </div>
        </div>
        <div
          className="bx--modal-footer iot--composed-modal-footer"
        >
          <button
            className="iot--btn bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Cancel
          </button>
          <button
            className="iot--btn bx--btn bx--btn--primary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Save
          </button>
        </div>
      </div>
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
